# poetry_workspace_plugin

./: .envrc  .gitignore  Makefile  README.md  pyproject.toml
example/: pyproject.toml
example/projects/experimental/: pyproject.toml
example/projects/liba/: pyproject.toml
example/projects/liba/liba/: __init__.py
example/projects/libb/: pyproject.toml
example/projects/libb/libb/: __init__.py
example/projects/libc/: Makefile  pyproject.toml
example/projects/libc/libc/: __init__.py
poetry_workspace/: diff.py  errors.py  formatter.py  graph.py  plugin.py  workspace.py
poetry_workspace/commands/: build.py  loader.py  release.py
poetry_workspace/commands/workspace/: __init__.py  build.py  changed.py  list.py  publish.py  release.py  run.py  version.py  workspace.py
poetry_workspace/schemas/: gen_schema.py  poetry-schema.json
poetry_workspace/vcs/: __init__.py  git.py  vcs.py
tests/: conftest.py  diff_test.py  graph_test.py  lock_test.py  workspace_test.py
tests/commands/workspace/: list_test.py
tests/fixtures/diff/commit_1/: pyproject.toml
tests/fixtures/diff/commit_1/projects/libb/: pyproject.toml
tests/fixtures/diff/commit_2/projects/liba/: pyproject.toml
tests/fixtures/diff/commit_2/projects/libb/: pyproject.toml
tests/fixtures/diff/commit_2/projects/libb/libb/: __init__.py
tests/fixtures/diff/commit_2/projects/libc/: pyproject.toml
tests/fixtures/diff/commit_2/projects/libc/libc/: __init__.py
tests/fixtures/list/basic/: pyproject.toml
tests/fixtures/list/basic/projects/liba/: pyproject.toml
tests/fixtures/lock/resolve_dependencies_directly/: pyproject.toml
tests/fixtures/lock/resolve_dependencies_directly/projects/liba/: pyproject.toml
tests/fixtures/lock/resolve_dependencies_directly/projects/libb/: pyproject.toml
tests/fixtures/lock/resolve_dependencies_directly/projects/libb/libb/: __init__.py
tests/vcs/: git_test.py  git_util.py
