[tool.poetry]
name = "experimental"
version = "0.1.0"
description = ""
authors = ["Martin Liu <martin.xs.liu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytz = ">2021"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
