[tool.poetry]
name = "liba"
version = "0.1.0"
description = ""
authors = ["Martin Liu <martin.xs.liu@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
run_liba = "liba:main"

[tool.poetry.dependencies]
python = "^3.8"
pendulum = "^2.1.2"
pytz = ">=2020,<2021"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
