[tool.poetry]
name = "liba"
version = "0.1.0"
description = ""
authors = ["Martin Liu <martin.xs.liu@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
run = "liba:main"
run_slow = "liba:main_slow"

[tool.poetry.dependencies]
python = "^3.8"
pytz = ">=2020,<2021"
requests = "*"

[tool.poetry.group.dev.dependencies]
pytest = ">=5"

[tool.poetry.group.numerical.dependencies]
numpy = ">=1"

[build-system]
requires = ["poetry-core>=1.1.0a6"]
build-backend = "poetry.core.masonry.api"
