[tool.poetry]
name = "libb"
version = "0.1.0"
description = ""
authors = ["Martin Liu <martin.xs.liu@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
run = "libb:main"
run_slow = "libb:main_slow"

[tool.poetry.dependencies]
python = "^3.8"
liba = {path = "../liba"}
pendulum = "^2.1.2"
pytz = ">=2020.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
