[tool.poetry]
name = "libc"
version = "0.1.0"
description = ""
authors = ["Martin Liu <martin.xs.liu@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
run = "libc:main"
run_slow = "libc:main_slow"

[tool.poetry.dependencies]
python = "^3.8"
libb = {path = "../libb"}
pytz = "<2020.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
